package SGG.Flyweight;

public abstract class WebSite {
    public abstract void use(User user);
}
